--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-xhr-backend": "^3.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-i18next": "^15.4.1"
+    "react-i18next": "^15.4.1",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
